versão 2 hora de codar

--- a/Index.html
+++ b/Index.html
@@ -11,16 +11,16 @@
     <p>Este site foi desenvolvido como parte da atividade "Hora de Codar", aplicada no Instituto Proa, com o objetivo de proporcionar um ambiente de aprendizado e prática das habilidades em JavaScript.</p>
 
     <div>
-        <button onclick="#">1- Carro</button>
-        <button onclick="#">2- Olá</button>
-        <button onclick="#">3- Idade</button>
-        <button onclick="#">4- Calcule a área de um Retângulo</button>
-        <button onclick="#">5- Calcule a área de um Quadrado</button>
-        <button onclick="#">6- Calcule a área de um Losango</button>
-        <button onclick="#">7- Calcule a área de um Trapézio</button>
-        <button onclick="#">8- Calcule a área de um Paralelogramo </button>
-        <button onclick="#">9- Calcule a área de um Triângulo</button>
-        <button onclick="#">10- Calcule a área de um Círculo</button>
+        <button onclick="execAtividade1()">1- Carro</button>
+        <button onclick="execAtividade2()">2- Olá</button>
+        <button onclick="execAtividade3()">3- Idade</button>
+        <button onclick="execAtividade4()">4- Calcule a área de um Retângulo</button>
+        <button onclick="execAtividade5()">5- Calcule a área de um Quadrado</button>
+        <button onclick="execAtividade6()">6- Calcule a área de um Losango</button>
+        <button onclick="execAtividade7()">7- Calcule a área de um Trapézio</button>
+        <button onclick="execAtividade8()">8- Calcule a área de um Paralelogramo </button>
+        <button onclick="execAtividade9()">9- Calcule a área de um Triângulo</button>
+        <button onclick="execAtividade10()">10- Calcule a área de um Círculo</button>
 
     </div>
 </body>
