Versão final hora de codar

--- a/Index.html
+++ b/Index.html
@@ -5,23 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hora de codar</title>
     <script src="horadecodar.js"></script>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Hora de codar</h1>
-    <p>Este site foi desenvolvido como parte da atividade "Hora de Codar", aplicada no Instituto Proa, com o objetivo de proporcionar um ambiente de aprendizado e prática das habilidades em JavaScript.</p>
+    <article>
+        <h1>Hora de codar</h1>
+        <p>Este site foi desenvolvido como parte da atividade "Hora de Codar", aplicada no Instituto Proa, com o objetivo de proporcionar um ambiente de aprendizado e prática das habilidades em JavaScript.</p>
 
-    <div>
-        <button onclick="execAtividade1()">1- Carro</button>
-        <button onclick="execAtividade2()">2- Olá</button>
-        <button onclick="execAtividade3()">3- Idade</button>
-        <button onclick="execAtividade4()">4- Calcule a área de um Retângulo</button>
-        <button onclick="execAtividade5()">5- Calcule a área de um Quadrado</button>
-        <button onclick="execAtividade6()">6- Calcule a área de um Losango</button>
-        <button onclick="execAtividade7()">7- Calcule a área de um Trapézio</button>
-        <button onclick="execAtividade8()">8- Calcule a área de um Paralelogramo </button>
-        <button onclick="execAtividade9()">9- Calcule a área de um Triângulo</button>
-        <button onclick="execAtividade10()">10- Calcule a área de um Círculo</button>
+        <div class="botoes">
+            <button onclick="execAtividade1()">Carro</button>
+            <button onclick="execAtividade2()">Olá</button>
+            <button onclick="execAtividade3()">Idade</button>
+            <button onclick="execAtividade4()">Calcule a área de um Retângulo</button>
+            <button onclick="execAtividade5()">Calcule a área de um Quadrado</button>
+            <button onclick="execAtividade6()">Calcule a área de um Losango</button>
+            <button onclick="execAtividade7()">Calcule a área de um Trapézio</button>
+            <button onclick="execAtividade8()">Calcule a área de um Paralelogramo</button>
+            <button onclick="execAtividade9()">Calcule a área de um Triângulo</button>
+            <button onclick="execAtividade10()">Calcule a área de um Círculo</button>
+        </div>
+    </article>
 
-    </div>
+    <footer>
+        <div class="redes-sociais">
+            <a href="https://github.com/raianys2" target="_blank">
+                <img src="Images/github 1.png" alt="GitHub">
+            </a>
+            <a href="https://www.linkedin.com/in/raiany-santana/" target="_blank">
+                <img src="Images/linkedin 1.png" alt="LinkedIn">
+            </a>
+        </div>
+        <p>&copy; 2023 Raiany Santana</p>
+    </footer>
+
 </body>
+
 </html>
